Fix vim modeline folding

--- a/local.zsh.template
+++ b/local.zsh.template
@@ -1,5 +1,5 @@
 #!/usr/bin/env zsh
-# vim: fdm=syntax
+# vim: fdm=marker
 # Local settings
 #***************************************************************************\
 # Copyright 2011-2014, Yu-chen Kao
